webapp/src/main/webapp/resources/css/style.css
:root {
    --primary-color: #212D40;
    --secondary-color: #D66853;
    --white: white;
    --badge-color: #364156;
    --error: red;
    --champagne-pink: #f1ddcf;
    --charcoal: #364156;
    --selected-button: #4076bd;
}

body {
    background: var(--secondary-color);
}

.error {
    color: var(--error) !important;
    font-size: 12px;
}

.link:hover {
    text-decoration: underline;
}

.normalized-margins {
    width: 90%;
    margin: 1% auto;
}

.card {
    border-radius: 10px;
}

a.card {
    display: block;
}

.btn, .btn-large{
    display: flex;
    justify-content: center;
    background: #212D40;
}

.btn:hover, .btn-large:hover {
    background-color: var(--selected-button);
}

.list-item {
    margin: 1% 3%;
}

.word-wrap {
    word-wrap: anywhere;
}

/* NavBar */

.nav-bar {
    background: var(--primary-color);
    padding-right: 3%;
}

.search-close {
    position: absolute;
    background-color: transparent;
}

.search-color {
    background: var(--white);
}

.brand-logo {
    display: flex !important;
    align-items: center;
    margin-left: 2%;
}

.logo-image {
    margin-left: 1%;
    height: 50px;
}

.search-size {
    max-width: 80%;
    max-height: 95%;
}

/*landing-page.jsp*/
.container {
    margin-top: 20px;
    margin-bottom: 20px;
}

.to-debates {
    color: var(--white);
    transition: 0.3s;
}

.to-debates:hover {
    color: var(--secondary-color);
}

.parallax-container {
    position: relative;
    overflow: hidden;
    height: max-content !important;
    color: white;
    padding-bottom: 30px;
}

.parallax-container .parallax {
    filter: brightness(0.5);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: -1;
}

.parallax-container .btn-small {
    background-color: transparent;
    border-radius: 10px;
}

.parallax-container .btn-small:hover {
    background: var(--badge-color);
}

.parallax-container h5 {
    text-align: center;
}

.parallax-container .parallax img {
    opacity: 0;
    z-index: -1 !important;
    position: absolute;
    left: 50%;
    bottom: 0;
    min-width: 100%;
    min-height: 100%;
}

.section {
    display: flex;
    flex-display: row;
    justify-content: center;
}

.section>div {
    flex-grow: 1;
}

.section>img {
    flex-grow: 1;
}

.page-footer {
    background: var(--primary-color);
    text-align: right !important;
    padding-bottom: 20px;
}

/* debate-list.jsp */

.debates-separator {
    display: flex;
    flex-direction: row;
    align-content: space-evenly;
}

.category-list {
    background: var(--white);
    border-radius: 10px;
    display: flex;
    align-items: center;
    flex-direction: column;
    margin: 1% auto;
    width: 20%;
    height: fit-content;
}

.selected-button {
    background-color: var(--selected-button);
}

.debate-list {
    background: var(--white);
    border-radius: 10px;
    display: flex;
    margin: 1% auto;
    flex-direction: column;
    width: 70%;
    height: fit-content;
}

.category-button {
    border-radius: 10px;
    width: 90%;
    margin: 1em 0;
}

.debate-list>h2 {
    margin-left: 3%;
}

.pagination li.active {
    background-color: var(--primary-color);
    transition: 0.3s;
}

.pagination li.selected-button {
    background-color: var(--selected-button);
}

.pagination li.active:hover {
    background-color: var(--selected-button);
}

.pagination-margin {
    margin-bottom: 2%;
}

.limit-img-sm {
    max-height: 17vh;
}


/* debate.jsp */

.debate-title {
    padding-bottom: 1%;
    margin: 0;
}

.image-width {
    min-width: 20%;
    display: flex;
    justify-content: center;
}

.limit-img {
    max-height: 30vh;
}

.debate-info-holder {
    display: flex;
    justify-content: space-between;
    padding-top: 1%;
}

.debate-text-holder {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    height: fit-content;
    padding-bottom: 4%;
}

.debate-holder-separator {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.debate-footer {
    display: flex;
    flex-direction: row;
    align-items: baseline;
    padding-top: 1%;
}

.debate-content {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.comment-list {
    background: var(--white);
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    width: 54%;
    margin-right: 1%;
}

.post-comments {
    width: 34%;
    margin-left: 1%;
}

/* 404.jsp */

.error-div {
    padding: 4%;
    background: white;
    text-align: center;
    border-radius: 10px;
}

.error-div>h1 {
}

.error-div>a:hover {
    text-decoration: underline;
}

.error-container {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    justify-content: center;
}

* {
    margin: 0px;
    padding: 0px;
}

.speech-bubble {
    width: 80%;
    margin: 1% 10%;
    border-radius: 15px;
    background: var(--champagne-pink);
    color: black;
    padding: 2% 2% 5%;
    text-align: left;
    font-weight: 500;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.comment-bubble>img {
    max-height: 20vh;
}

/* speech bubble right */

.sb-right:before {
    content: "";
    width: 0;
    height: 0;
    position: absolute;
    border-left: 15px solid var(--champagne-pink);
    border-right: 15px solid transparent;
    border-top: 15px solid var(--champagne-pink);
    border-bottom: 15px solid transparent;
    right: -16px;
    top: 0;
}

/* speech bubble left */

.sb-left:before {
    content: "";
    width: 0;
    height: 0;
    position: absolute;
    border-left: 15px solid transparent;
    border-right: 15px solid var(--champagne-pink);
    border-top: 15px solid var(--champagne-pink);
    border-bottom: 15px solid transparent;
    left: -16px;
    top: 0;
}

.comment-owner {
    color: slategrey !important;
}

.comment-extra {
    display: flex;
    flex-direction: row;
    align-items: stretch;
}

.comment-info {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: baseline;
}

/* login.jsp */

.login-container {
    width: 40%;
    margin: 1% auto;
    padding-bottom: 1%;
}

.debate-form-container {
    width: 40%;
    margin: 1% auto;
    padding-bottom: 1%;
}

@media screen and (max-width: 900px) {
    .login-container {
        width: 95%;
    }
}

/*profile.jsp*/

.profile-container {
    width: 80%;
    height: 80%;
    margin: 1% auto;
    display: flex;
    flex-direction: row;
}

.profile-container {
    display: flex;
    flex-direction: row;
}

.email-format {
    display: flex;
    flex-direction: row;
    align-items: center;
}
.profile-data {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 30%;
    margin-right: 10%;
}

.profile-data>img {
    max-width: 250px;
    max-height: 250px;
    min-width: 100px;
    min-height: 100px;
    margin: 5%;
    width: 15vw;
    height: 15vw;
    border-radius: 50%;
}

.profile-data>h4 {
    margin-top: 10%;
    font-weight: bold;
}

.user-debates {
    width: 60%;
    padding: 2%;
}

.card-title-margins {
    margin: 5%;
    padding: 5% 0;
}

.badge-margin {
    margin-top: 1%;
}

.no-borders {
    border-collapse: collapse;
}

